style.css
:root {
    --lavenderMist: #D7B5D6; 
    --barbie: #EE7DDB;
    --softMint: #A7D4B1;      
    --powderBlue: #A8C7E6;     
    --butterflyMainBackground: #2C2730;
    --butterflyMainText: #F4EAF4;
}

html, body {
    height: 100%;
    margin: 0;
}

body {
    background: linear-gradient(rgba(44,39,48,0.7), rgba(44,39,48,0.7)), url("Backgrounds/purpleBunnyButterfly.png");
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    color: var(--barbie);
    font-family: "georgia", serif;
    font-size: large;
    line-height: 1.6;
}

main {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center; 
    justify-content: flex-start;
    padding-top: 50px;    
}

.container-main {
    text-align: center;
    padding: 20px;
    background-color: var(--butterflyMainBackground);
    color: var(--butterflyMainText);
    margin: 20px 0;
    max-width: 900px;
    width: 90%;
    border-style: double;
    border-radius: 10px;
    border-color: var(--barbie);
    
}

p a {
  color: var(--powderBlue);
  text-decoration: none;
  font-weight: bold;
}

p a:hover {
  color: var(--butterflyMainBackground);
  background-color: var(--barbie);
  text-decoration: none;
  border-radius: 2px;

}

.wrapper {
    display: flex;
    align-items: flex-start; 
    gap: 30px;              
    margin-bottom: 20px;
}

.wrapper-text{
    flex: 2; 
}

.wrapper-image{
    flex: 1; 
    max-width: 300px; 
}

.wrapper-image img {
    width: 100%; 
    height: auto;
    border-radius: 10px; 
    border: 3px double var(--barbie);
}

footer {
    text-align: center;
    padding: 20px 0;
}

/* stacks on mobile */
@media (max-width: 600px) {
    .wrapper{
        flex-direction: column;
    }
}

/* Highlight text color change */
::selection {
    background-color: var(--softMint);
    color: var(--butterflyMainBackground);
}

::-moz-selection {
    background-color: var(--softMint);
    color: var(--butterflyMainBackground);
}

::-webkit-selection {
    background-color: var(--softMint);
    color: var(--butterflyMainBackground);
}

